--- a/terai.html
+++ b/terai.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>てらいtest</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>てらいtest</title>
 </head>
 
 <body>
-    <h1>てらいなおき</h1>
+  <h1>てらいなおき</h1>
   <p>てすとだよ！</p>
+  <p>dieするよって言ってるよ</p>
 </body>
 
 </html>
